--- a/resources/static/main.css
+++ b/resources/static/main.css
@@ -2,6 +2,6 @@ html, body{
 	height: 100%
 }
 body {
-		background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+		background: #2cb5e8;
     opacity: 0.95;
 }
