--- a/resources/static/builder.css
+++ b/resources/static/builder.css
@@ -19,7 +19,7 @@ body {
 	margin-left: 100px;
 	position: relative;
 	float: left;
-	width: 60%;
+	width: 50%;
 }
 
 .form-wrap.form-builder .frmb-control {
@@ -28,10 +28,14 @@ body {
     width: 75%;
 }
 
+.save-class {
+	width: 20px;
+}
+
 .form-actions {
 	float: none !important;
 	margin-top: 15px !important;
-	width: 278px;
+	width: 132px;
     margin-left: -96px;
 }
 
@@ -39,17 +43,29 @@ body {
 	display: none !important;
 }
 
+#publish {
+	position: absolute;
+    margin-left: 76.5%;
+    top: 61px;
+    height: 35px;
+    background-color: #2185d0;
+    color: #fff;
+    font-size: 1rem;
+    width: 147px;
+    border-radius: 4px;
+    z-index: 10;
+    outline: none;
+}
+
 .save-template {
-	content: '' !important;
-	background-color: #2185d0;
-    color: #fff !important;
-    font-size: 1rem !important;
-	width: 50%;
+	display: none !important;
 }
 
 .clear-all {
+	border-radius: 4px !important;
 	background-color: #eb8239;
     color: #fff !important;
     font-size: 1rem !important;
-	width: 50%;
+	width: 100%;
+	outline: none;
 }
