--- a/resources/static/form.css
+++ b/resources/static/form.css
@@ -1,12 +1,44 @@
-html, body {
-	height: 100%
-}
 body {
-	background: #2cb5e8;
-    opacity: 0.95;
+	background-color: #FAFAFA;
+font-family: 'Merriweather Sans', sans-serif;
 }
+
+h3 {
+text-align: left;
+margin-left: 5%;
+font-size: 24px;
+}
+
+#cont {  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+border-radius: 5px;
+width: auto;
+padding:2%;
+margin:2%;
+overflow:auto;
+/*background-color:#FF6666; */
+}
+
 #question {
 		position: relative;
 		left: 100px;
-		font-size: 30px;
+		font-size: 20px;
+}
+
+.topnav {
+    overflow: hidden;
+    text-align: center;
+    margin-top: 2%;
+}
+
+.topnav a {
+    color: #3087E5;
+    padding: 20px 24px;
+    text-decoration: none;
+    font-size: 28px;
+
+}
+
+#submit {
+	margin-left: 20%;
+	margin-bottom: 5%;
 }
