--- a/resources/static/results.css
+++ b/resources/static/results.css
@@ -11,6 +11,7 @@ width: auto;
 padding:2%;
 margin:2%;
 overflow:auto;
+background: -color:#FAFAFA;
 }
 
 .col-sm-4{box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
